修改stair布局logo和branding

--- a/sites/all/themes/gxnulib/sass/layouts/stair/stair.layout.scss
+++ b/sites/all/themes/gxnulib/sass/layouts/stair/stair.layout.scss
@@ -1,7 +1,7 @@
 /*******************************************************************************
- * hero.layout.scss
+ * stair.layout.scss
  *
- * Styles for the Hero layout.
+ * Styles for the Stair layout.
  ******************************************************************************/
 @import "compass";
 @import "breakpoint";
