--- a/sites/all/themes/gxnulib/css/layouts/stair/stair.layout.no-query.css
+++ b/sites/all/themes/gxnulib/css/layouts/stair/stair.layout.no-query.css
@@ -1,143 +1,51 @@
-/*******************************************************************************
- * hero.layout.scss
- *
- * Styles for the Hero layout.
- ******************************************************************************/
-.l-constrained, .l-region--highlighted, .l-region--footer {
-  width: 95%;
-  margin: 0 auto;
-  *zoom: 1;
-}
-.l-constrained:after, .l-region--highlighted:after, .l-region--footer:after {
-  content: "";
-  display: table;
-  clear: both;
-}
+/*
+Error: File to import not found or unreadable: hero.layout.
+       Load path: E:/www/php/library/sites/all/themes/gxnulib/sass/layouts/stair
+        on line 5 of E:\www\php\library\sites\all\themes\gxnulib\sass\layouts\stair\stair.layout.no-query.scss
 
-/* Header */
-.l-region--header {
-  padding: 18px 0;
-}
-.l-region--header .block {
-  float: right;
-}
+1: $breakpoint-no-queries: true;
+2: $breakpoint-no-query-fallbacks: true;
+3: 
+4: // Re import everything from ohm-hero-layout.scss but without media queries.
+5: @import "hero.layout";
 
-/* Content Area */
-.l-highlighted-wrapper {
-  padding: 18px 0;
-}
-
-.l-region--help {
-  margin-bottom: 18px;
-}
-
-.l-main {
-  margin-top: 36px;
-  margin-bottom: 36px;
-}
-
-/* Sidebars */
-.l-region--sidebar-first,
-.l-region--sidebar-second {
-  padding: 18px 1em;
-}
-
-/* Footer */
-.l-footer-wrapper {
-  padding: 18px 0;
-}
-
-.l-constrained, .l-region--highlighted, .l-region--footer {
-  width: 90%;
-}
-
-/* Header */
-.l-branding {
-  width: 23.40426%;
-  float: left;
-  margin-right: -100%;
-  margin-left: 0%;
-  clear: none;
-}
-
-.l-region--navigation {
-  width: 48.93617%;
-  float: left;
-  margin-right: -100%;
-  margin-left: 25.53191%;
-  clear: none;
-}
-
-.l-region--header {
-  width: 23.40426%;
-  float: right;
-  margin-left: 0;
-  margin-right: 0;
-  clear: none;
-}
-
-/* Sidebars */
-.has-two-sidebars .l-content,
-.has-one-sidebar .l-content {
-  width: 65.95745%;
-  float: left;
-  margin-right: -100%;
-  margin-left: 0%;
-  clear: none;
-}
-.has-two-sidebars .l-region--sidebar-first,
-.has-two-sidebars .l-region--sidebar-second,
-.has-one-sidebar .l-region--sidebar-first,
-.has-one-sidebar .l-region--sidebar-second {
-  width: 31.91489%;
-  float: right;
-  margin-left: 0;
-  margin-right: 0;
-  clear: none;
-  clear: right;
-}
-
-.l-constrained, .l-region--highlighted, .l-region--footer {
-  width: 80%;
-}
-
-/* Sidebars */
-.has-one-sidebar .l-content {
-  width: 65.95745%;
-  float: left;
-  margin-right: -100%;
-  margin-left: 0%;
-  clear: none;
-}
-.has-one-sidebar .l-region--sidebar-first {
-  width: 31.91489%;
-  float: right;
-  margin-left: 0;
-  margin-right: 0;
-  clear: none;
-  clear: none;
-}
-
-.has-two-sidebars .l-content {
-  width: 48.93617%;
-  float: left;
-  margin-right: -100%;
-  margin-left: 0%;
-  clear: none;
-}
-.has-two-sidebars .l-region--sidebar-first,
-.has-two-sidebars .l-region--sidebar-second {
-  width: 23.40426%;
-  float: left;
-  margin-right: -100%;
-  margin-left: 51.06383%;
-  clear: none;
-  clear: none;
-}
-.has-two-sidebars .l-region--sidebar-second {
-  width: 23.40426%;
-  float: right;
-  margin-left: 0;
-  margin-right: 0;
-  clear: none;
-}
+Backtrace:
+E:\www\php\library\sites\all\themes\gxnulib\sass\layouts\stair\stair.layout.no-query.scss:5
+D:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/import_node.rb:66:in `rescue in import'
+D:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/import_node.rb:45:in `import'
+D:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/import_node.rb:28:in `imported_file'
+D:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/import_node.rb:37:in `css_import?'
+D:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:301:in `visit_import'
+D:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/base.rb:36:in `visit'
+D:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
+D:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/stack.rb:79:in `block in with_base'
+D:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/stack.rb:115:in `with_frame'
+D:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/stack.rb:79:in `with_base'
+D:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:158:in `visit'
+D:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
+D:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/base.rb:52:in `map'
+D:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/base.rb:52:in `visit_children'
+D:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:167:in `block in visit_children'
+D:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
+D:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:166:in `visit_children'
+D:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/base.rb:36:in `block in visit'
+D:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:186:in `visit_root'
+D:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/base.rb:36:in `visit'
+D:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:157:in `visit'
+D:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/visitors/perform.rb:8:in `visit'
+D:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/root_node.rb:36:in `css_tree'
+D:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/tree/root_node.rb:29:in `render_with_sourcemap'
+D:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/engine.rb:368:in `_render_with_sourcemap'
+D:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/engine.rb:285:in `render_with_sourcemap'
+D:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/exec/sass_scss.rb:396:in `run'
+D:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/exec/sass_scss.rb:62:in `process_result'
+D:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/exec/base.rb:52:in `parse'
+D:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/lib/sass/exec/base.rb:19:in `parse!'
+D:/Program Files (x86)/Koala/rubygems/gems/sass-3.4.9/bin/sass:13:in `<top (required)>'
+D:/Program Files (x86)/Koala/bin/sass:18:in `load'
+D:/Program Files (x86)/Koala/bin/sass:18:in `<main>'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Error: File to import not found or unreadable: hero.layout.\A        Load path: E:/www/php/library/sites/all/themes/gxnulib/sass/layouts/stair\A         on line 5 of E:\www\php\library\sites\all\themes\gxnulib\sass\layouts\stair\stair.layout.no-query.scss\A \A 1: $breakpoint-no-queries: true;\A 2: $breakpoint-no-query-fallbacks: true;\A 3: \A 4: // Re import everything from ohm-hero-layout.scss but without media queries.\A 5: @import \"hero.layout\";"; }
