更新sass-globbing版本号为1.1.0，修正scss文件import相对路径问题

--- a/sites/all/themes/gxnulib/sass/layouts/stair/stair.layout.scss
+++ b/sites/all/themes/gxnulib/sass/layouts/stair/stair.layout.scss
@@ -14,10 +14,16 @@ and open the template in the editor.
 @import "singularitygs";
 
 // Globbing from within sub-folders only works with relative paths.
-@import "../variables/**/*";
+@import "../../variables/**/*";
 
 .l-contrained {
     width: 95%;
     margin: 0 auto;
     @include pie-clearfix;
+}
+
+// Footer
+.l-footer {
+    padding: $vert-spacing-unit 0;
+    background: darken($grey, 30%);
 }
