--- a/sites/all/themes/gxnulib/css/layouts/stair/stair.layout.css
+++ b/sites/all/themes/gxnulib/css/layouts/stair/stair.layout.css
@@ -7,7 +7,15 @@ and open the template in the editor.
     Created on : Apr 2, 2015, 5:32:24 PM
     Author     : Stephen
 */
-/* No files to import found in ../variables/**\/* */
+/*
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+*/
+/* 
+    Created on : Apr 1, 2015, 10:51:36 AM
+    Author     : Stephen
+*/
 /* line 19, ../../../sass/layouts/stair/stair.layout.scss */
 .l-contrained {
   width: 95%;
@@ -18,5 +26,10 @@ and open the template in the editor.
     content: "";
     display: table;
     clear: both; }
+
+/* line 26, ../../../sass/layouts/stair/stair.layout.scss */
+.l-footer {
+  padding: 20px 0;
+  background: #464646; }
 
 /*# sourceMappingURL=stair.layout.css.map */
