修改字号为14px，修改区域express

--- a/sites/all/themes/gxnulib/css/layouts/stair/stair.layout.css
+++ b/sites/all/themes/gxnulib/css/layouts/stair/stair.layout.css
@@ -30,6 +30,7 @@ and open the template in the editor.
 /* line 26, ../../../sass/layouts/stair/stair.layout.scss */
 .l-footer {
   padding: 20px 0;
-  background: #464646; }
+  background: #464646;
+  text-align: center; }
 
 /*# sourceMappingURL=stair.layout.css.map */
