--- a/sites/all/themes/gxnulib/sass/layouts/stair/stair.layout.scss
+++ b/sites/all/themes/gxnulib/sass/layouts/stair/stair.layout.scss
@@ -26,4 +26,5 @@ and open the template in the editor.
 .l-footer {
     padding: $vert-spacing-unit 0;
     background: darken($grey, 30%);
+    text-align: center;
 }
