--- a/sites/all/themes/gxnulib/sass/base/_typography.scss
+++ b/sites/all/themes/gxnulib/sass/base/_typography.scss
@@ -15,7 +15,11 @@ html {
  * $LINKS
  */
 a {
-    @include link-colors($blue, $blue, $blue, $blue, $blue);
+    @include link-colors($red, $light-red, $red, $dark-red, $red);
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: underline;
 }
 
 /**
@@ -28,16 +32,13 @@ h4, .delta,
 h5, .epsilon,
 h6, .zeta {
     @include rhythm(0, 0, 0, 0.2);
-    color: darken($red, 5%);
+    color: $red;
     text-transform: uppercase;
 
     a,
     a:visited {
         color: inherit;
         text-decoration: none;
-    }
-    a:hover {
-        color: $dark-red;
     }
 }
 
@@ -111,4 +112,18 @@ mark,
     text-transform: capitalize;
     
     @include border-radius(10px);
+}
+
+/**
+ * $FOOTERS
+ */
+footer,
+.footer {
+    padding: $vert-spacing-unit 0;
+    
+    background: $dark-grey;
+    
+    text-align: center;
+    color: $light-grey;
+    @include font-size(12px);
 }
