--- a/sites/all/themes/gxnulib/sass/layouts/sword-front/sword-front.layout.scss
+++ b/sites/all/themes/gxnulib/sass/layouts/sword-front/sword-front.layout.scss
@@ -1,7 +1,7 @@
 /*******************************************************************************
- * library.layout.scss
+ * sword-front.layout.scss
  *
- * Styles for the Library layout.
+ * Styles for the Sword Front layout.
  ******************************************************************************/
 @import "compass";
 @import "breakpoint";
